# api/api.yaml
@@ -62,7 +62,7 @@ paths:
       summary: Troba una submission segons el seu id.
       description: Retorna el contingut de la publicacio i tots els seus comentaris. 
       parameters:
-        - name: submissionId
+        - name: id
           in: path
           description: ID de la Submission a buscar
           required: true
@@ -84,7 +84,8 @@ paths:
               examples:
                 errorExample:
                   $ref: '#/components/examples/error400'
-        '404':
+
+        404:
           description: 'Error: Not Found'
           content:
             application/json:
@@ -93,68 +94,7 @@ paths:
               examples:
                 errorExample:
                   $ref: '#/components/examples/error404'
-    delete:
-      tags:
-        - submissions
-      summary: Esborra una submissions i tots els seus comentaris
-      parameters:
-        - name: submissionId
-          in: path
-          description: ID de la submission a esborrar
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '204':
-          description: Submission deleted
-          content:
-            application/json: {}
-        '400':
-          description: 'Error: Bad Request'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResult'
-              examples:
-                errorExample:
-                  $ref: '#/components/examples/error400'
-                400CommentDeleted:
-                  value: |-
-                    {
-                        "status": 400,
-                        "error": "Bad Request",
-                        "message": "Submission with id: 1 was deleted before."
-                    }
-        '401':
-          description: 'Error: Unauthorized'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResult'
-              examples:
-                errorExample:
-                  $ref: '#/components/examples/error401'
-        '403':
-          description: 'Error: Forbidden'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResult'
-              examples:
-                errorExample:
-                  $ref: '#/components/examples/error403'
-        '404':
-          description: 'Error: Not Found'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResult'
-              examples:
-                errorExample:
-                  $ref: '#/components/examples/error404'
-      security:
-        - ApiKeyAuth: []
+                  
   /submission/{id}/edit:
     put:
       tags:
@@ -526,16 +466,16 @@ paths:
               type: object
               properties:
                 id_submission:
-                  type: integer
-                  example: 1
+                  type: string
+                  example: "1"
                 comment:
                   type: string
                   minLength: 4
                   maxLength: 280
                   example: My comment
                 id_comment_father:
-                  type: integer
-                  example: 1
+                  type: string
+                  example: "1"
         required: true
       responses:
         '201':
@@ -589,7 +529,7 @@ paths:
       summary: Troba un Comentari pel seu identificador
       description: Retorna un únic Comentari i tots els seus fills
       parameters:
-        - name: commentId
+        - name: id
           in: path
           description: ID del Comentari a retornar
           required: true
@@ -628,7 +568,7 @@ paths:
         - comments
       summary: Esborra un Comentari i tots els seus fills
       parameters:
-        - name: commentId
+        - name: id
           in: path
           description: ID del commentari a esborrar
           required: true
@@ -961,8 +901,7 @@ paths:
           description: ID of Comment to return
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '200':
           description: successful operation
@@ -1223,12 +1162,12 @@ paths:
         - user
       summary: Obté el llistat de submissions de l'usuari amb userID.
       parameters:
-        - name: userID
+        - name: name
           in: path
           description: ID de l'usuari del que volem el llistat de submissions.
           required: true
           schema:
-            type: integer
+            type: string
       responses:
         '200':
           description: Successful operation
@@ -1265,13 +1204,6 @@ paths:
         - user
       summary: Obté el llistat de submissions que ha votat l'usuari amb userID.
       operationId: getUserVotedSubmissions
-      parameters:
-        - name: userID
-          in: path
-          description: ID de l'usuari del que volem el llistat de submissions votades.
-          required: true
-          schema:
-            type: integer
       responses:
         '200':
           description: Successful operation
@@ -1301,6 +1233,8 @@ paths:
               examples:
                 errorExample:
                   $ref: '#/components/examples/error404'
+      security:
+        - ApiKeyAuth: []
 components:
   schemas:
     Comment:
